--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="shortcut icon" href="favicon.png" >
+
 
 		<title>CSExpertQA</title>
 
@@ -174,7 +176,7 @@
 					<!-- copyright -->
 					<div class="col-md-8 col-md-pull-4">
 						<div class="footer-copyright">
-								<span>&copy; Copyright 2018. All Rights Reserved. Made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a target="_new" href="https://www.prashantshinde.in">Prashant Shinde.</a></span>
+								<span>&copy; Copyright 2018. All Rights Reserved. Made with <i class="fas fa-heart" aria-hidden="true"></i> by <a target="_new" href="https://www.prashantshinde.in">Prashant Shinde.</a></span>
 						</div>
 					</div>
 					<!-- /copyright -->
