--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<nav id="nav">
 					<ul class="main-menu nav navbar-nav navbar-right social-ico">
 						
-							<li><a href="#" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
+							<li><a href="https://www.facebook.com/csexpertqa" target="_new" class="facebook"><i class="fab fa-facebook-f"></i></a></li>
 							<li><a href="#" class="twitter"><i class="fab fa-twitter"></i></a></li>
 							<li><a href="#" class="instagram"><i class="fab fa-instagram"></i></a></li>
 							<li><a href="#" class="youtube"><i class="fab fa-youtube"></i></a></li>
@@ -399,7 +399,7 @@
 					<!-- copyright -->
 					<div class="col-md-8 col-md-pull-4">
 						<div class="footer-copyright">
-							<span>&copy; Copyright 2018. All Rights Reserved. Made with <i class="fas fa-heart" aria-hidden="true"></i> by <a target="_new" href="https://www.prashantshinde.in">Prashant Shinde.</a></span>
+							<span>&copy; Copyright 2018. All Rights Reserved. </span>
 						</div>
 					</div>
 					<!-- /copyright -->
