--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8">
-							<h1 class="white-text">Confused with homework?</h1>
-							<p class="lead white-text">Get help with your assignments online with the help of our experts.</p>
+							<h1 class="white-text">Confused with homework and exam?</h1>
+							<p class="lead white-text">Have an expert do your assignments. Focus on what matters to you, not your teacher.</p>
 							<a class="main-button icon-button" href="contact.html">Get Started!</a>
 						</div>
 					</div>
@@ -130,7 +130,7 @@
 							<i class="feature-icon fas fa-dollar-sign"></i>
 							<div class="feature-content">
 								<h4>Affordable</h4>
-								<p>Pricing starts from as low as $5.</p>
+								<p>Pricing starts from as low as $15.</p>
 							</div>
 						</div>
 						<!-- /feature -->
@@ -389,7 +389,7 @@
 						<ul class="footer-social">
 							<li>Terms</li>
 							<li>Policy</li>
-							<li>LegalInfo</li>
+							<li>Legal Info</li>
 
 						
 						</ul>
