--- a/contact.html
+++ b/contact.html
@@ -20,15 +20,9 @@
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
 
-		<!-- Custom stlylesheet -->
 		<link type="text/css" rel="stylesheet" href="css/style.css"/>
 
-		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
-		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
+
 
     </head>
 	<body>
@@ -65,14 +59,11 @@
 
 			</div>
 		</header>
-		<!-- /Header -->
 
-		<!-- Hero-area -->
 		<div class="hero-area section">
 
-			<!-- Backgound Image -->
+	
 			<div class="bg-image bg-parallax overlay" style="background-image:url(./img/page-background.jpg)"></div>
-			<!-- /Backgound Image -->
 
 			<div class="container">
 				<div class="row">
@@ -114,7 +105,7 @@
 						<h4>Contact Information</h4>
 						<ul class="contact-details">
 							<li><i class="fa fa-envelope"></i>csexpertqa@gmail.com</li>
-							<li><i class="fa fa-map-marker"></i>Jane Dawson, Seattle</li>
+							<li><i class="fa fa-map-marker"></i>Seattle, Washington.</li>
 						</ul>
 
 						
