--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
 						<h4>Contact Information</h4>
 						<ul class="contact-details">
 							<li><i class="fa fa-envelope"></i>csexpertqa@gmail.com</li>
-							<li><i class="fa fa-map-marker"></i>Seattle, Washington.</li>
+							<li><i class="fa fa-map-marker"></i>Seattle, Washington</li>
 						</ul>
 
 						
@@ -166,7 +166,7 @@
 					<!-- copyright -->
 					<div class="col-md-8 col-md-pull-4">
 						<div class="footer-copyright">
-								<span>&copy; Copyright 2018. All Rights Reserved.</span>
+								<span>&copy; Copyright 2018. All Rights Reserved</span>
 						</div>
 					</div>
 					<!-- /copyright -->
