--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-8">
-							<h1 class="white-text">Confused with homework and exam?</h1>
-							<p class="lead white-text">Have an expert do your assignments. Focus on what matters to you, not your teacher.</p>
+							<h1 class="white-text">Confused with CS Homework and Exam?</h1>
+							<p class="lead white-text">We are experts in Computer Science and Engineering and help students globally everyday with their Assignments and Exams.</p>
 							<a class="main-button icon-button" href="contact.html">Get Started!</a>
 						</div>
 					</div>
