--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<div class="row">
 						<div class="col-md-8">
 							<h1 class="white-text">Confused with CS Homework and Exam?</h1>
-							<p class="lead white-text">We are experts in Computer Science and Engineering and help students globally everyday with their Assignments and Exams.</p>
+							<p class="lead white-text">Get personal assistance from  our experts in Computer Science and Engineering.</p>
 							<a class="main-button icon-button" href="contact.html">Get Started!</a>
 						</div>
 					</div>
