--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
 							<li>Contact</li>
 						</ul>
 						<h1 class="white-text">Get In Touch</h1>
-						<p>Please fill the form below and our expert will get back to you shortly for personal assistance</p>
+						<p class="white-text">Please fill the form below and our expert will get back to you shortly for personal assistance</p>
 
 					</div>
 				</div>
